tem muita coisa aqui já

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
        <section class="container_Middle">
 
             <div class="categoriesFromTasks">
-                <button class="termin_ModifyTask_button">Tasks</button>
+                <button id="testeButton" class="termin_ModifyTask_button">Tasks</button>
                 <button class="termin_ModifyTask_button">Sensor</button>
                 <button class="termin_ModifyTask_button">Audio</button>
                 <button class="termin_ModifyTask_button">Silent Vent</button>
             </div>
 
-            <hr>
+            <hr class="LinhaSeparadora">
 
             <div class="telaDoTerminal">
                 <div class="telaDeTarefas">
@@ -46,7 +46,7 @@
                 <button class="termin_ModifyTask_button">Silent Vent</button>
             </div>
 
-            <hr>
+            <hr class="LinhaSeparadora">
 
             <div class="telaDoTerminal">
                <div class="grupoDeSalas">
