--- a/index.html
+++ b/index.html
@@ -9,33 +9,6 @@
 <body>
 
     <main id="containerPrincipal" class="containerPrincipal">
-       <section class="container_Middle">
-
-            <div class="categoriesFromTasks">
-                <button id="testeButton" class="termin_ModifyTask_button">Tasks</button>
-                <button class="termin_ModifyTask_button">Sensor</button>
-                <button class="termin_ModifyTask_button">Audio</button>
-                <button class="termin_ModifyTask_button">Silent Vent</button>
-            </div>
-
-            <hr class="LinhaSeparadora">
-
-            <div class="telaDoTerminal">
-                <div class="telaDeTarefas">
-                    <div class="tdf">
-                        <button class="TasksToDo">Lote de suplementos - 1</button>
-                        <button class="TasksToDo">Lote de suplementos - 2</button>
-                        <button class="TasksToDo">Lote de suplementos - 3</button>
-                    </div>
-                    <div class="tdf">
-                        <button class="TasksToDo">Lote de suplementos - 4</button>
-                        <button class="TasksToDo">Lote de suplementos - 5</button>
-                        <button class="TasksToDo">Finish Night</button>
-                    </div>
-                </div>
-            </div>
-            
-       </section> 
 
       <section class="container_Middle">
 
@@ -48,8 +21,8 @@
 
             <hr class="LinhaSeparadora">
 
-            <div class="telaDoTerminal">
-               <div class="grupoDeSalas">
+            <div id="telaDoTerminal" class="telaDoTerminal">
+               <div id="grupoDeSalas" class="grupoDeSalas">
                     <div class="Left_Salas-grupo1">
                         <div class="P_Sala"><div id="moltenFreddy" class="Animatronic"></div></div>
                         <hr class="dutoVertical">
